src/test/ui/mismatched_types/cast-rfc0401-str.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/cast-rfc0401-str.rs:7:13
   |
LL |     let _ = a as *const dyn Foo;
   |             ^ doesn't have a size known at compile-time
   |
   = help: within `str`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `str`
   = note: required for the cast to the object type `dyn Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
